--- a/Chiaradia1erparcial/pom.xml
+++ b/Chiaradia1erparcial/pom.xml
@@ -51,6 +51,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<!--<version>8.0.22</version>-->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
