--- a/Chiaradia1erparcial/pom.xml
+++ b/Chiaradia1erparcial/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>resilience4j-spring-boot2</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.vaadin.external.google</groupId>
+			<artifactId>android-json</artifactId>
+			<version>0.0.20131108.vaadin1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
